--- a/style.css
+++ b/style.css
@@ -1,45 +1,54 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
     margin: 2%;
 }
-.pink-color{
+
+.pink-color {
     color: hotpink;
 }
-p{
+
+p {
     text-align: justify;
 }
-.link-button{
+
+.link-button {
     text-decoration: none;
     padding: 10px 40px;
     color: lavenderblush;
-    background-image: linear-gradient(rgb(255, 0, 149),rgb(255, 0, 85));
+    background-image: linear-gradient(rgb(255, 0, 149), rgb(255, 0, 85));
     font-weight: 700;
     border-radius: 5px;
-    
+
 }
-h1{
+
+h1 {
     font-size: 40px;
-   
+
 }
-.width-half{
+
+.width-half {
     width: 50%;
     padding-right: 5%;
     padding-left: 5%;
 }
-.width-half img{
+
+.width-half img {
     width: 80%;
 
 }
-.flexible-area{
+
+.flexible-area {
     display: flex;
     margin-bottom: 150px;
 }
-.header-boxcolor{
+
+.header-boxcolor {
     border-left: 5px solid;
-    border-image: linear-gradient(salmon,hotpink);
+    border-image: linear-gradient(salmon, hotpink);
     border-image-slice: 1;
 }
-.goals{
+
+.goals {
     width: 23%;
     color: mistyrose;
     box-shadow: 1px snow;
@@ -48,68 +57,93 @@ h1{
     padding: 2%;
     border-radius: 10px;
 }
-#first-box{
+
+#first-box {
     background-color: rgb(192, 108, 192);
 }
-#second-box{
+
+#second-box {
     background-color: rgb(247, 57, 120);
 }
-#third-box{
+
+#third-box {
     background-color: rgb(224, 168, 64);
 }
-.back-pic{
+
+.back-pic {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: left;
     padding-left: 5%;
 }
-.rightside-pic{
+
+.rightside-pic {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
-    background-position:right;
+    background-position: right;
 }
-footer h2{
-    font-family:monospace;
+
+footer h2 {
+    font-family: monospace;
     font-weight: 700;
     font-size: 30px;
 }
 
-footer{
-    height: 25%;
+footer p {
+    margin-bottom: 5px;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover {
+    color: hotpink;
+}
+
+
+footer {
+    padding: 15px;
     width: 100%;
-    background-color: black;
+    margin-top: 100px;
     color: white;
     text-align: center;
 }
-.footer-content{
+
+.footer-content {
     display: inline-block;
-    
+
 }
-.interest1{
-        width: 40%;
-        color: rgb(14, 13, 13);
-        background-image: linear-gradient(pink,white);
-        box-shadow:10px 10px 10px gray;
-        margin-right: 3%;
-        margin-left: 3%;
-        padding: 2%;
-        border-radius: 15px;
-}
-.interest1 h2{
-    font-weight: 700;
-    color: rgb(70, 0, 70);
-}
-.interest2{
+
+.interest1 {
     width: 40%;
     color: rgb(14, 13, 13);
-    background-image: linear-gradient(pink,white);
-    box-shadow:10px 10px 10px gray;
+    background-image: linear-gradient(pink, white);
+    box-shadow: 10px 10px 10px gray;
     margin-right: 3%;
     margin-left: 3%;
     padding: 2%;
     border-radius: 15px;
 }
-.interest2 h2{
-font-weight: 700;
-color: rgb(70, 0, 70);
+
+.interest1 h2 {
+    font-weight: 700;
+    color: rgb(70, 0, 70);
+}
+
+.interest2 {
+    width: 40%;
+    color: rgb(14, 13, 13);
+    background-image: linear-gradient(pink, white);
+    box-shadow: 10px 10px 10px gray;
+    margin-right: 3%;
+    margin-left: 3%;
+    padding: 2%;
+    border-radius: 15px;
+}
+
+.interest2 h2 {
+    font-weight: 700;
+    color: rgb(70, 0, 70);
 }
